--- a/aws/ec2_with_user_data.yml
+++ b/aws/ec2_with_user_data.yml
@@ -262,3 +262,6 @@ Resources:
     Type: AWS::EC2::EIP
     Properties:
       InstanceId: !Ref WebAppServer
+      Tags:
+        - Key: Name
+          Value: !Sub ${AWS::StackName}-webapp
