--- a/aws/ec2_with_user_data.yml
+++ b/aws/ec2_with_user_data.yml
@@ -211,6 +211,8 @@ Resources:
           #!/bin/bash
           eval "$(ssh-agent)"
 
+          sudo timedatectl set-timezone Asia/Tokyo
+
           sudo yum update -y
 
           sudo amazon-linux-extras install -y nginx1
