--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -7,43 +7,43 @@ on:
       - main
 
 jobs:
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6.8
-
-      - name: Cache bundle
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: bundle-v1-${{ hashFiles('Gemfile.lock') }}
-
-      - name: Run bundle install
-        run: |
-          bundle config --local deployment true
-          bundle config --local without production
-          bundle install
-
-      - name: Cache yarn
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: yarn-v1-${{ hashFiles('yarn.lock') }}
-
-      - run: RAILS_ENV=test bundle exec rails assets:precompile
-
-      - run: bundle exec rails test
+#  test:
+#    name: Test
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - uses: ruby/setup-ruby@v1
+#        with:
+#          ruby-version: 2.6.8
+#
+#      - name: Cache bundle
+#        uses: actions/cache@v2
+#        with:
+#          path: vendor/bundle
+#          key: bundle-v1-${{ hashFiles('Gemfile.lock') }}
+#
+#      - name: Run bundle install
+#        run: |
+#          bundle config --local deployment true
+#          bundle config --local without production
+#          bundle install
+#
+#      - name: Cache yarn
+#        uses: actions/cache@v2
+#        with:
+#          path: node_modules
+#          key: yarn-v1-${{ hashFiles('yarn.lock') }}
+#
+#      - run: RAILS_ENV=test bundle exec rails assets:precompile
+#
+#      - run: bundle exec rails test
 
   deploy:
     name: Deploy app to AWS
-    needs: test
-    if: github.ref == 'refs/heads/main'
+#    needs: test
+#    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
 
     steps:
@@ -56,11 +56,12 @@ jobs:
 
       - name: Deploy
         run: |
-          ssh -t webapp@${{ secrets.TARGET_HOSTNAME }} "cd rails-deploy &&
-          git pull origin main &&
-          ~/.rbenv/shims/bundle config --local deployment true &&
-          ~/.rbenv/shims/bundle config --local without development:test &&
-          ~/.rbenv/shims/bundle install &&
-          RAILS_ENV=production ~/.rbenv/shims/bundle exec rails assets:precompile &&
-          RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate &&
-          ~/.rbenv/shims/bundle exec pumactl restart"
+          ssh -t webapp@${{ secrets.TARGET_HOSTNAME }} "cd rails-deploy"
+#          ssh -t webapp@${{ secrets.TARGET_HOSTNAME }} "cd rails-deploy &&
+#          git pull origin main &&
+#          ~/.rbenv/shims/bundle config --local deployment true &&
+#          ~/.rbenv/shims/bundle config --local without development:test &&
+#          ~/.rbenv/shims/bundle install &&
+#          RAILS_ENV=production ~/.rbenv/shims/bundle exec rails assets:precompile &&
+#          RAILS_ENV=production ~/.rbenv/shims/bundle exec rails db:migrate &&
+#          ~/.rbenv/shims/bundle exec pumactl restart"
