--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -78,6 +78,7 @@ jobs:
             HostName ${{ secrets.BASTION_HOSTNAME }}
             User webapp
             IdentityFile ~/.ssh/rails-deploy-webapp
+            StrictHostKeyChecking no
 
           Host ${{ secrets.TARGET_HOSTNAME }}
             ProxyJump bastion
