--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -72,6 +72,9 @@ jobs:
           chmod 600 ~/.ssh/rails-deploy-webapp
 
       - name: Capistrano deploy
-        run: bundle exec cap production deploy
+        run: |
+          eval $(ssh-agent)
+          ssh-add ~/.ssh/rails-deploy-webapp
+          bundle exec cap production deploy
         env:
           CAP_SERVER: ${{ secrets.TARGET_HOSTNAME }}
