--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -74,14 +74,12 @@ jobs:
       - name: Set SSH Config
         run: |
           cat << EOF > ~/.ssh/config
-          Host bastion
-            HostName ${{ secrets.BASTION_HOSTNAME }}
-            User webapp
-            IdentityFile ~/.ssh/rails-deploy-webapp
+          Host rails-deploy-bastion
             StrictHostKeyChecking no
+            HostName ${{ secrets.BASTION_HOSTNAME }}
 
-          Host ${{ secrets.TARGET_HOSTNAME }}
-            ProxyJump bastion
+          Host rails-deploy-webapp
+            ProxyJump webapp@rails-deploy-bastion
           EOF
 
       - name: Capistrano deploy
@@ -90,4 +88,4 @@ jobs:
           ssh-add ~/.ssh/rails-deploy-webapp
           bundle exec cap production deploy
         env:
-          CAP_SERVER: ${{ secrets.TARGET_HOSTNAME }}
+          CAP_SERVER: rails-deploy-webapp
