--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -1,11 +1,11 @@
 # Note: You must restart bin/webpack-dev-server for changes to take effect
 
 default: &default
-  source_path: app/packs
-  source_entry_path: entrypoints
+  source_path: app/javascript
+  source_entry_path: packs
   public_root_path: public
   public_output_path: packs
-  cache_path: tmp/webpacker
+  cache_path: tmp/cache/webpacker
   webpack_compile_output: true
 
   # Additional paths webpack should look up modules
