--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -15,6 +15,10 @@ jobs:
         with:
           ruby-version: 2.6.8
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+
       - name: Cache bundle
         uses: actions/cache@v2
         with:
@@ -26,6 +30,7 @@ jobs:
           bundle config --local path vendor/bundle
           bundle config --local without production
           bundle install
+
       - name: Cache yarn
         uses: actions/cache@v2
         with:
